# skeleton-cpp11

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt
